<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4"
    android:layout_columnWeight="1"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    tools:context=".ListItemsActivity">

    <RadioButton
        android:id="@+id/radioButtonListItem"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/radioButton" />

    <CheckBox
        android:id="@+id/checkBoxListItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/checkBox" />

    <Switch
        android:id="@+id/switchListItems"
        android:layout_width="128dp"
        android:layout_height="50dp"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:text="@string/Switch1Text" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/button5"
        android:layout_width="3dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_columnWeight="3"
        android:layout_marginTop="20dp"
        android:text="@string/PreviousPage" />

    <Button
        android:id="@+id/button6"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_columnWeight="1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Home" />

</GridLayout>