<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginBottom="5dp"
        android:text="@string/LoginText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LoginName"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button7"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        style="@style/ButtonStyle"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:text="@string/LoginText" />

<!--    <Button-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="178dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_weight="0"-->
<!--        android:text="@string/NextPage" />-->

<!--    <Button-->
<!--        android:id="@+id/button3"-->
<!--        android:layout_width="178dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_weight="0"-->
<!--        android:text="@string/PreviousPage" />-->

<!--    <Button-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="178dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="100dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_weight="0"-->
<!--        android:text="@string/Home" />-->

</LinearLayout>